# llama.cpp-quant-gemm

./: .gitignore  ALIGNMENT_ANALYSIS.md  ALIGNMENT_FIX_SUMMARY.md  BLOG-Debug-Journey.md  BUILD_AND_TEST_GUIDE.md  BUILD_STATUS.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  DOCUMENTATION_ORGANIZATION_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GETTING_STARTED.md  INTERFACE_ALIGNMENT_SUMMARY.md  INTERFACE_COMPARISON.md  INTERFACE_COMPATIBILITY.md  MNK_DEFINITION_ANALYSIS.md  Makefile  OPERATOR_LIST.md  PERFORMANCE_TEST_SUMMARY.md  PROJECT_ANALYSIS.md  PROJECT_ARCHITECTURE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_SUMMARY.md  TESTING_GUIDE_MNK_ANALYSIS.md  TESTING_METHODS.md  TEST_FLOW_SUMMARY.md  TEST_RESULTS.md  TEST_STATUS.md  TEST_SUMMARY.md  TEST_VERIFICATION_REPORT.md  detailed_calc.py  manual_calc.py  run_test.sh  test_cpu_ref.cpp  test_custom_mnk.cu  test_dot.cpp  test_dp4a.cu  (+7 more)
compat/: ggml_cuda_compat.cuh  ggml_types.h
docs/: 2d_tiling_final_report.md  ALGORITHM_TESTING_DETAILED.md  BUG_FIX_REPORT.md  GETTING_STARTED.md  INTERFACE_ALIGNMENT_STATUS.md  LLAMA_CPP_INTERFACE_ALIGNMENT.md  README.md  TASK_TEMPLATE_FRAMEWORK.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  VIEW_DOCS.sh  correctness_report.md  final_optimization_report.md  level3_vectorization_report.md  level4_fusion_analysis.md  warp_optimization_summary.md
docs/analysis/: GPU_REFERENCE_IMPLEMENTATION_ANALYSIS.md  KERNEL_TEST_FRAMEWORK_ANALYSIS.md  PYTHON_BINDING_ANALYSIS.md  QUANTIZATION_FORMATS_FIX_DOCUMENTATION.md  TESTING_METHOD_ANALYSIS.md  W4A8_DATAFLOW_ANALYSIS.md
docs/guides/: CUDA-GEMM-BENCHMARK-TUTORIAL.md  HOW_TO_TEST_NEW_KERNEL.md  INTEGRATION_GUIDE.md  QUICK-REFERENCE.md  TESTING_GUIDE.md
docs/llama-cpp-integration/: EXPERIMENT-ANALYSIS.md  LLAMA-CPP-GEMM-TUTORIAL.md  LLAMA-CPP-MMQ-ANALYSIS.md  MMQ-LINE-BY-LINE-EXPLANATION.md  README.md  mmq_vs_baseline_test.cu  test-kernel-real-data.cu  test_all_kernels.cu
docs/op_type_schema/: README.md  TASK_TEMPLATE.md  activation.md  dequantize.md  quant_gemm.md  quant_vec_dot.md  quantize.md  rmsnorm.md  rope.md  softmax.md
docs/reports/: FINAL_TEST_REPORT.md  INTEGRATION_TEST_REPORT.md  LLAMA_CPP_PERFORMANCE_COMPARISON.md  NAIVE_VS_LLAMA_CPP_DETAILED.md  Q8_0_TEST_REPORT.md  REAL_DATA_TEST_REPORT.md
docs/testing/: 2026-01-29-TEST-SUMMARY.md  CUDA-12.8-TEST-LOG.md
flashinfer_trace/definitions/: README.md
flashinfer_trace/definitions/quant_gemm/: w4_1a8_q4_1_q8_1_n4096_k4096.json  w4a16_q4_0_fp32_n4096_k4096.json  (+1 more)
include/: gemm_cuda_tiled.cuh  gemm_reference.h  llama_adapter.h  quant_types.h  quantize.h  test_utils.h
kernels/activation/: gelu.cuh  silu.cuh
kernels/attention/: rope.cuh  softmax.cuh
kernels/elementwise/: elementwise.cuh
kernels/gemm/: QUANT_FORMATS.md  README.md  gemm_async_copy.cuh  gemm_cuda_dp4a.cuh  gemm_cuda_naive.cuh  gemm_fused.cuh  gemm_quant_formats.cuh  gemm_vectorized.cuh  gemm_warp_optimized.cuh
kernels/normalization/: rms_norm.cuh
python/: README.md  pyproject.toml  setup.py  test_operator.py
python/operators/: kernel_prompt_generator.py
python/quant_gemm/: __init__.py
python/quant_gemm/csrc/: bindings.cpp  gemm_ops.cu
python/tests/: test_gemm_q4_0.py
schemas/: README.md
schemas/docs/: definition.md  solution.md
schemas/solutions/: gemm_q4_0_q8_1_cuda_dp4a.json  gemm_q4_0_q8_1_cuda_naive.json  gemm_q4_0_q8_1_cuda_tiled.json
scripts/: build_and_test.sh  compare_performance.sh  run_llama_perf_test.sh
tests/: benchmark_best.cu  benchmark_warp_optimized.cu  profile_kernel.cu  step1_fp32_gemm.cu  step2_quantization.cu  step3_w4a16_gemm.cu  step4_w4a8_gemm.cu  step5_llama_comparison.cu  test_correctness.cu  test_cuda_init.cu  test_custom_kernel.cu  test_llama_shapes.cu  test_simple.cu  test_step1_simple.cu
tests/benchmark/: benchmark_comparison.cu
tests/framework/: test_framework.cuh
tests/unit/: test_gemm_all_quants.cu  test_gemm_q4.cu  test_rms_norm.cu  test_rope.cu  test_silu.cu  test_softmax.cu
tutorials/: README.md
tutorials/00-introduction/: README.md
tutorials/01-cuda-basics/: README.md
tutorials/02-quantization-basics/: README.md
(+12 files in other folders)
