[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "torch>=2.0.0",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "quant_gemm"
version = "0.1.0"
description = "Python bindings for quantized GEMM CUDA kernels"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy",
]

[tool.setuptools]
packages = ["quant_gemm"]
